crates/swc/tests/tsc-references/classExtendsItself_es5.1.normal.js
import _class_call_check from "@swc/helpers/lib/_class_call_check.js";
import _inherits from "@swc/helpers/lib/_inherits.js";
import _create_super from "@swc/helpers/lib/_create_super.js";
var C1 = /*#__PURE__*/ function(C) {
    "use strict";
    _inherits(C1, C);
    var _super = _create_super(C1);
    function C1() {
        _class_call_check(this, C1);
        return _super.apply(this, arguments);
    }
    return C1;
} // error
(C1);
var D1 = /*#__PURE__*/ function(D) {
    "use strict";
    _inherits(D1, D);
    var _super = _create_super(D1);
    function D1() {
        _class_call_check(this, D1);
        return _super.apply(this, arguments);
    }
    return D1;
} // error
(D1);
var E1 = /*#__PURE__*/ function(E) {
    "use strict";
    _inherits(E1, E);
    var _super = _create_super(E1);
    function E1() {
        _class_call_check(this, E1);
        return _super.apply(this, arguments);
    }
    return E1;
} // error
(E1);
